Fix horizontal scrolling issues and UI improvements
- Prevent horizontal scrolling on wider screens.
- Update max-block-size for better panel display.
- Add overflow-x: auto for smaller screens.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -33,7 +33,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: var(--color-bg);
-  /*overflow: hidden;*/
+  overflow-x: hidden;
 }
 
 p {
@@ -277,11 +277,33 @@ iframe {
 :is(.instruction, .panel, .list-panel, .fav-panel) {
   min-inline-size: 350px;
   max-inline-size: 400px;
-  max-block-size: 500px;
+  max-block-size: 60%;
   inset-inline-end: 10px;
   overflow-y: auto;
   overflow-x: hidden;
   word-wrap: break-word;
+}
+
+.drop-menu {
+  max-inline-size: 140px;
+  inset-inline-end: 180px;
+
+  & button {
+    display: block;
+    inline-size: 100%;
+    font-size: 1em;
+    padding: 4px;
+    color: var(--color-btn);
+    background-color: transparent;
+    border: none;
+    border-radius: var(--border-radius-sm);
+    text-align: center;
+    transition: background-color var(--transition-fast);
+
+    &:hover {
+      background-color: var(--color-hvr);
+    }
+  }
 }
 
 .tooltip {
@@ -436,28 +458,6 @@ iframe {
   }
 }
 
-.drop-menu {
-  max-inline-size: 140px;
-  inset-inline-end: 180px;
-
-  & button {
-    display: block;
-    inline-size: 100%;
-    font-size: 1em;
-    padding: 4px;
-    color: var(--color-btn);
-    background-color: transparent;
-    border: none;
-    border-radius: var(--border-radius-sm);
-    text-align: center;
-    transition: background-color var(--transition-fast);
-
-    &:hover {
-      background-color: var(--color-hvr);
-    }
-  }
-}
-
 .loopInput {
   max-inline-size: 100%;
   margin-block-end: 5px;
@@ -492,6 +492,10 @@ iframe {
 }
 
 @media (max-width: 600px) {
+  body {
+    overflow-x: auto;
+  }
+
   .container {
     inline-size: 100%;
     block-size: calc(
@@ -578,7 +582,6 @@ iframe {
 
   :is(.instruction, .panel, .list-panel, .fav-panel, .drop-menu) {
     max-inline-size: 100%;
-    max-block-size: 60%;
     inset-inline: 0;
     inset-block-end: 90px;
     border-end-start-radius: 0;
